--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@repo/db": "workspace:*",
     "@types/express": "^5.0.1",
     "express": "^5.1.0",
-    "@repo/db": "workspace:*"
-
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@repo/common-backend": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/common-backend": "workspace:*"
+    "@repo/common":"workspace:*",
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
