--- a/packages/common-backend/package.json
+++ b/packages/common-backend/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
-  "exports":{
-    "./config" : "./src/config.ts"  
+  "exports": {
+    "./config": "./src/config.ts"
   },
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.2"
   }
 }
