--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -5,21 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" :"tsc -b ",
-    "start" : "node dist/index.js",
-    "dev" : "pnpm run build && pnpm run start"    
+    "build": "tsc -b ",
+    "start": "node dist/index.js",
+    "dev": "pnpm run build && pnpm run start"
   },
   "devDependencies": {
+    "@repo/common-backend": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/common-backend":"workspace:*"
+    "@types/jsonwebtoken": "^9.0.9"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@repo/db": "workspace:*",
     "@types/ws": "^8.18.0",
-    "ws": "^8.18.1",
-    "@repo/db":"workspace:*"
-
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.1"
   }
 }
