--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"tsc -b"
   },
   "exports":{
-    "./types":"./src/types.ts"
+    "./types":"./dist/types.js"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
