--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@repo/db": "workspace:*",
     "@types/express": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@repo/common": "workspace:*",
     "@repo/common-backend": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/common":"workspace:*",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.9"
   }
 }
